--- a/UI/css/responsive.css
+++ b/UI/css/responsive.css
@@ -103,8 +103,13 @@
         padding-bottom: 0px;
         float: left;
     }
+    .logo img {
+        max-width: 50%; /* Reduce logo size */
+        height: 20%; /* Maintain aspect ratio */
+    }
+
     .header {
-        height: 84px;
+        height: 70px;
     }
     .carousel-item img {
         min-height: 570px;
@@ -155,13 +160,14 @@
     .navigation.navbar-dark .navbar-toggler {
         float: right;
         border: inherit;
-        margin-top: -61px;
+        margin-top: -41px;
     }
+   
     .testimonial_box {
         padding: 0px 19px 40px 20px;
     }
     .navigation.navbar-dark .navbar-toggler-icon {
-        background: url(../images/menu_icon.png);
+        background: url(../assets/images/menu_icon.png);
         background-repeat: no-repeat;
     }
     .d_none {
