--- a/css/responsive.css
+++ b/css/responsive.css
@@ -156,10 +156,10 @@
     .navigation .navbar-collapse {
         background: #0f1521;
         padding: 20px;
-       margin-top: -5px;
+       margin-top: 45px;
         position: absolute;
         width: 100%;
-        margin-right: 20px;
+        margin-right: 10px;
         z-index: 999;
     }
     .navigation.navbar-dark .navbar-nav .nav-link {
@@ -169,7 +169,7 @@
     .navigation.navbar-dark .navbar-toggler {
         float: right;
         border: inherit;
-        margin-top: -11px;
+        margin-top: -8px;
     }
     .testimonial_box {
         padding: 0px 19px 40px 20px;
@@ -177,6 +177,168 @@
     .navigation.navbar-dark .navbar-toggler-icon {
         background: url(../assets/images/menu_icon.png);
         background-repeat: no-repeat;
+    }
+    .d_none {
+        display: none;
+    }
+}
+
+@media (max-width: 320px){
+    .logo {
+        text-align: center !important;
+        padding-bottom: 0px;
+        float: left;
+    
+    }
+    .logo img {
+        margin-top: -15px;
+        width: 120px;
+    }
+    .header {
+        height: 45px;
+    }
+    .carousel-item img {
+        min-height: 570px;
+    }
+    .book_room h1 {
+        font-size: 20px;
+        line-height: 25px;
+        padding-bottom: 15px;
+    }
+    .book_now .online_book {
+        margin-bottom: 20px;
+    }
+    .book_btn {
+        padding: 5px 0;
+    }
+    .about .titlepage {
+        max-width: inherit;
+    }
+    .about_img {
+        margin-right: 0px;
+        margin-top: 30px;
+    }
+    .main_form .send_btn {
+        margin-bottom: 30px;
+    }
+    ul.link_menu {
+        margin-bottom: 20px;
+    }
+    .navigation.navbar {
+        float: right;
+        display: inherit !important;
+        padding: 0;
+        width: 100%;
+    }
+    .navigation .navbar-collapse {
+        background: #0f1521;
+        padding: 20px;
+       margin-top: -10px;
+        position: absolute;
+        width: 100%;
+        margin-right: -10px;
+        z-index: 999;
+        font-size: 50px;
+    }
+    .navigation.navbar-dark .navbar-nav .nav-link {
+        padding: 10px 0;
+        color: #fff;
+    }
+    .navigation.navbar-dark .navbar-toggler {
+        float: right;
+        border: inherit;
+        margin-top: -50px;
+        margin-right: -20px;
+    }
+    .testimonial_box {
+        padding: 0px 19px 40px 20px;
+    }
+    .navigation.navbar-dark .navbar-toggler-icon {
+        background: url(../assets/images/menu_icon.png);
+        background-repeat: no-repeat;
+        height: 20px;
+        width: 20px;
+    }
+    .d_none {
+        display: none;
+    }
+}
+
+@media (max-width: 430px){
+    .logo {
+        text-align: center !important;
+        padding-bottom: 0px;
+        float: left;
+    
+    }
+    .logo img {
+        margin-top: -15px;
+        width: 120px;
+    }
+    .header {
+        height: 45px;
+    }
+    .carousel-item img {
+        min-height: 570px;
+    }
+    .book_room h1 {
+        font-size: 20px;
+        line-height: 25px;
+        padding-bottom: 15px;
+    }
+    .book_now .online_book {
+        margin-bottom: 20px;
+    }
+    .book_btn {
+        padding: 5px 0;
+    }
+    .about .titlepage {
+        max-width: inherit;
+    }
+    .about_img {
+        margin-right: 0px;
+        margin-top: 30px;
+    }
+    .main_form .send_btn {
+        margin-bottom: 30px;
+    }
+    ul.link_menu {
+        margin-bottom: 20px;
+    }
+    .navigation.navbar {
+        float: right;
+        display: inherit !important;
+        padding: 0;
+        width: 100%;
+    }
+    .navigation .navbar-collapse {
+        background: #0f1521;
+        padding: 20px;
+       margin-top: -10px;
+        position: absolute;
+        width: 100%;
+        margin-right: -40px;
+        z-index: 999;
+        font-size: 50px;
+    }
+    .navigation.navbar-dark .navbar-nav .nav-link {
+        padding: 10px 0;
+        color: #fff;
+    }
+    .navigation.navbar-dark .navbar-toggler {
+        float: right;
+        border: inherit;
+        margin-top: -50px;
+        margin-right: -20px;
+    }
+    .testimonial_box {
+        padding: 0px 19px 40px 20px;
+    }
+    .navigation.navbar-dark .navbar-toggler-icon {
+        background: url(../assets/images/menu_icon.png);
+        background-repeat: no-repeat;
+        height: 20px;
+        width: 20px;
     }
     .d_none {
         display: none;
