--- a/css/responsive.css
+++ b/css/responsive.css
@@ -274,6 +274,7 @@
     .logo img {
         margin-top: -15px;
         width: 120px;
+        margin-left: 4px;
     }
     .header {
         height: 45px;
@@ -340,6 +341,61 @@
         height: 20px;
         width: 20px;
     }
+    .back_re {
+        height: 50px;
+    }
+    .back_re .title h2 {
+        font-size: 20px;
+        padding: 10px 0
+
+    }
+    .back_re .title {
+        text-align: left;
+        margin-left: 4px;
+   }
+   .our_room {
+    background-color: #f4f5f7;
+    padding: 8px 0 5px 0;
+    margin-top: 85px;
+}
+
+   .about h2 {
+    font-size: 25px;
+   } 
+   .our_room h2 {
+    font-size: 25px;
+   } 
+   .gallery h2 {
+    font-size: 25px;
+   } 
+   .blog h2 {
+    font-size: 25px;
+   } 
+   .contact h2 {
+    font-size: 25px;
+   } 
+   
+   .main_form .contactus {
+    height: 40px;
+    font-size: 13px;
+   }
+   .main_form .textarea {
+    font-size: 13px;
+   } 
+   .main_form .send_btn {
+    margin-top: -10px !important;
+    padding: -10px 0px;
+    width: 100%;
+    max-width: 120px;
+    font-weight: 400;
+    font-size: 15px;
+   }
+   .about .titlepage p {
+    font-size: 16px;
+    margin-top: -20px;
+   } 
+
+
     .d_none {
         display: none;
     }
