--- a/css/style.css
+++ b/css/style.css
@@ -508,8 +508,8 @@ button {
 
 .our_room {
      background-color: #f4f5f7;
-     padding: 30px 0 5px 0;
-     margin-top: 90px;
+     padding: 15px 0 5px 0;
+     margin-top: 75px;
 }
 
 .our_room .titlepage {
@@ -695,10 +695,14 @@ button {
      width: 100%;
      height: 58px;
      background: #fff;
-     color: #000000;
+     color: #8a8787;
      font-size: 18px;
      font-weight: normal;
      box-shadow: 2px 0px 6px rgba(255, 9, 9, 0.20);
+}
+
+.main_form input{
+     color: #8a8787;
 }
 
 .main_form .textarea {
@@ -920,14 +924,15 @@ ul.social_icon li a:hover {
 /**  inner page css **/
 .back_re {
      background-color: #0f1521;
+     height: 70px;
 }
 .back_re .title {
      text-align: center;
 }
 .back_re .title h2 {
 color:#fff;
-font-size: 40px;
-padding: 40px 0;
+font-size: 30px;
+padding: 20px 0;
 font-weight: 600;
 text-transform: uppercase;
 line-height: 35px;
@@ -953,6 +958,8 @@ line-height: 35px;
 
  .search-box {
      margin-bottom: 20px;
+     margin-left: 0px;
+     border: #010101;
   }
   
   #searchInput {
