modified some color on UI and also added Admin accounts managment feature

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@
 .container {
      max-width: 1170px;
 }
+.apartments-container{
+    max-width: 1170px;
+}
 
 html {
      scroll-behavior: smooth;
@@ -157,6 +160,9 @@ a,
      transition: all .3s ease-in-out;
 }
 
+.btn :hover{
+    background-color: #001c53;
+}
 img {
      max-width: 100%;
      height: auto;
@@ -369,7 +375,7 @@ button {
 }
 
 .av-btn{
-     background-color: #fe0000;
+     background-color: #0f1521;
      max-width: 189px;
      text-align: center;
      width: 100%;
@@ -529,6 +535,12 @@ button {
      margin-top: 0 !important;
      margin-block-start: 0 !important;
  }
+
+.room {
+    box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.20);
+    border-radius: 10px;
+    transform: rotateY(-6px);
+} 
  
  .our_room .titlepage {
      text-align: center;
@@ -581,12 +593,14 @@ button {
  
  #serv_hover:hover.room {
      cursor: pointer;
-     box-shadow: 0px 0px 30px rgba(255, 9, 9, 0.15);
+     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
      transition: ease-in all 0.5s;
      border: #0056b3;
+     transform: translateY(-5px);
 
 
  } 
+
 
 /** end our_room section **/
 
@@ -756,7 +770,7 @@ button {
 }
 
 .main_form .send_btn:hover {
-     background-color: #ff0909;
+    background-color: #353232;
      transition: ease-in all 0.5s;
      color: #fff;
 }
@@ -1103,7 +1117,7 @@ line-height: 35px;
      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
  }
 
- .our-room .card {
+ .our-room .room {
      transition: transform 0.3s;
  }
  .our-room .serv_hover:hover {
@@ -1134,6 +1148,10 @@ line-height: 35px;
      margin: 40px auto;
      font-family: 'Arial', sans-serif;
  }
+ 
+ .advert-container{
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+ } 
  
  .advert-form-section h2 {
      font-size: 28px;
@@ -1199,7 +1217,7 @@ line-height: 35px;
  }
  
  .submit-btn:hover {
-     background-color: #ff3333;
+    background-color: #001c53;
      transform: translateY(-2px);
  }
  
@@ -1229,7 +1247,6 @@ line-height: 35px;
  
  
  .adv {
-     background: linear-gradient(135deg, #f4ccc5 0%, #ffede9 100%);
      padding-top: 0 !important;
      margin-top: 0 !important;
      margin-block-start: 0 !important;
@@ -1258,7 +1275,7 @@ line-height: 35px;
  .login-container {
      background-color: #ffffff;
      padding: 50px;
-     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
      border-radius: 8px;
      width: 500px;
      text-align: center;
@@ -1295,7 +1312,7 @@ line-height: 35px;
  .login-btn {
      width: 100%;
      padding: 15px;
-     background-color: #e63d3d;
+     background: #0f1521;
      color: #fff;
      font-size: 18px;
      font-weight: bold;
@@ -1306,19 +1323,18 @@ line-height: 35px;
  }
  
  .login-btn:hover {
-     background-color: #fa0808;
+     background-color: #04085f;
      transform: translateY(-3px);
  }
  
  .login-btn:active {
-     background-color: #c0392b;
+     background-color: #041057;
      transform: translateY(0);
  }
 
  /** my booking section **/
 /* Search Filters Styling */
 .search-filters {
-     background-color: #f4ccc5;
      padding: 10px;
      display: flex;
      justify-content: space-around;
@@ -1421,7 +1437,7 @@ line-height: 35px;
  }
 
  .filter-buttons {
-     background-color: #d34032; /* Light red color */
+     background-color: #000e1d; /* Light red color */
      color: #fff;
      border: none;
      padding: 10px 20px;
@@ -1432,7 +1448,8 @@ line-height: 35px;
  }
  
  .filter-buttons:hover {
-     background-color: #f50a02; /* Darker red for hover */
+    background-color: #011f3f; /* Darker red for hover */
+    transform: translateY(-3px);
  }
  
  .booking-error {
@@ -1475,7 +1492,7 @@ line-height: 35px;
      
  }
  
- .card {
+ .room {
      border-radius: 12px;
      border: 1px;
      background: white;
@@ -1485,15 +1502,16 @@ line-height: 35px;
        -webkit-box-shadow:0px 0px 6px var(--rayal-white-borders);
        -moz-box-shadow:0px 0px 6px var(--rayal-white-borders);
        cursor: pointer;
+       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
  }
  
  .btn-primary {
-     background-color: #e63d3d; /* Your brand color */
+    background-color: #0f1521;/* Your brand color */
      border: none;
  }
  
  .btn-primary:hover {
-     background-color: #fa0808; /* Darker hover color */
+    background-color: #001d58; /* Darker hover color */
  }
  
  /* Emoji Picker Container Styling */
@@ -1584,15 +1602,22 @@ line-height: 35px;
 
  /* KHALIDI CHANGES : Styles for the red button */
 .btn-red {
-     background-color: rgb(204, 8, 8);
-     border-color: red;
+    background-color: #0f1521;
  }
  
  .btn-red:hover {
-     background-color: darkred;
-     border-color: darkred;
+    background-color: #001c53;
  }
  
+ .btn-danger{
+    background-color: #0f1521;
+    border:#0f1521;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+ }
+
+ .btn-danger :hover{
+    background-color: #00246b;
+ }
  
 
 /*Gallery CSS*/
@@ -1664,7 +1689,7 @@ line-height: 35px;
    }
    
    #search-btn {
-     background-color: #ca1818;
+    background-color: #002f8d;
      color: #fff;
      border: none;
      margin-top: 34px;
@@ -1676,7 +1701,7 @@ line-height: 35px;
    }
    
    #search-btn:hover {
-     background-color: #ff0000;
+    background-color: #004fee;
    }
    
    /** Additionals*/
@@ -1689,7 +1714,7 @@ line-height: 35px;
 
 
 /*CHDJHV*/
-.card {
+.room {
      border-radius: 10px;
      overflow: hidden;
      margin-bottom: 15px;
@@ -1700,6 +1725,7 @@ line-height: 35px;
     -webkit-box-shadow:0px 0px 6px var(--rayal-white-borders);
     -moz-box-shadow:0px 0px 6px var(--rayal-white-borders);
     cursor: pointer;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
    }
    
 
@@ -1819,12 +1845,12 @@ line-height: 35px;
      text-align: right;
    }
  
-   .card img {
+   .room img {
      cursor: pointer;
      transition: transform 0.3s ease-in-out;
    }
    
-   .card img:hover {
+   .room img:hover {
      transform: scale(1.1); /* Zooms the image by 10% */
    }
 
@@ -1833,7 +1859,6 @@ line-height: 35px;
 /*test */
 .testimonials {
      padding: 50px 0;
-     background-color: #f0f8ff;
  }
  
  .container {
@@ -1989,8 +2014,9 @@ line-height: 35px;
  .payment form {
      width: 700px;
      padding: 20px;
-     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5);
      margin-left: 230px;
+     margin-bottom: 100px;
  }
  
  .container form .row {
@@ -2005,7 +2031,7 @@ line-height: 35px;
  
  .col .title {
      font-size: 20px;
-     color: rgb(237, 55, 23);
+     color: #0f1521;
      padding-bottom: 5px;
  }
  
@@ -2042,7 +2068,7 @@ line-height: 35px;
  }
  
  .col .inputBox img {
-     height: 34px;
+     height: 22px;
      margin-top: 5px;
  }
  
@@ -2050,16 +2076,16 @@ line-height: 35px;
      width: 100%;
      padding: 12px;
      font-size: 17px;
-     background-color: #ca1818;
+     background-color: #0f1521;
      color: #fff;
      margin-top: 5px;
      cursor: pointer;
      letter-spacing: 1px;
-     border:  #ca1818;
+     border: #0f1521;
  }
  
  .container form .submit_btn:hover {
-     background: #ff0000;
+    background-color: #002061;
  }
  
  input::-webkit-inner-spin-button,
@@ -2079,13 +2105,14 @@ line-height: 35px;
      min-height: 100vh;
      margin-top: 50px;
      margin-bottom: 50px;
+
  }
  
  .admin-container {
      background-color: #ffffff;
      padding: 40px;
      border-radius: 10px;
-     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
      max-width: 500px;
      width: 90%;
  }
@@ -2154,10 +2181,19 @@ line-height: 35px;
      background-color: #222;
  }
  
- /* Additional small screen adjustments */
- 
- 
+ .raw{
+    text-align: center;
+ }
 
+ .raw .final-price{
+    margin-top: 20px;
+    margin-bottom: 10px;
+ }
+
+ .btn-danger :hover{
+     background-color: #0f1521;
+ }
+ 
 
  
 
